Drop --add-modules from cross-compat example
DurableJavaThreads's README/tests have been updated to drop the
--add-modules jdk.jdi,java.management flag: it is not needed on any
JDK 9+ version (confirmed by DJT's CI matrix across JDK 8-25 on
Linux/macOS/Windows). Keep this README's example in sync.

https://claude.ai/code/session_016Z8kWNz2hsTBsMRj18YMYL